adding text and references

--- a/text/bibli.bib
+++ b/text/bibli.bib
@@ -2054,3 +2054,217 @@ year={1972}
   publisher={Frontiers}
 }
 
+@article{gentzkow2019text,
+  title={Text as data},
+  author={Gentzkow, Matthew and Kelly, Bryan and Taddy, Matt},
+  journal={Journal of Economic Literature},
+  volume={57},
+  number={3},
+  pages={535--74},
+  year={2019}
+}
+
+@article{wilkerson2017large,
+  title={Large-scale computerized text analysis in political science: Opportunities and challenges},
+  author={Wilkerson, John and Casas, Andreu},
+  journal={Annual Review of Political Science},
+  volume={20},
+  pages={529--544},
+  year={2017},
+  publisher={Annual Reviews}
+}
+
+@article{roberts2016introduction,
+  title={Introduction to the virtual issue: recent innovations in text analysis for social science},
+  author={Roberts, Margaret E},
+  journal={Political Analysis},
+  volume={24},
+  number={V10},
+  pages={1--5},
+  year={2016},
+  publisher={Cambridge University Press}
+}
+
+@article{grimmer2013text,
+  title={Text as data: The promise and pitfalls of automatic content analysis methods for political texts},
+  author={Grimmer, Justin and Stewart, Brandon M},
+  journal={Political analysis},
+  volume={21},
+  number={3},
+  pages={267--297},
+  year={2013},
+  publisher={Cambridge University Press}
+}
+
+@article{blei2003latent,
+  title={Latent dirichlet allocation},
+  author={Blei, David M and Ng, Andrew Y and Jordan, Michael I},
+  journal={Journal of machine Learning research},
+  volume={3},
+  number={Jan},
+  pages={993--1022},
+  year={2003}
+}
+
+
+@article{slapin2008scaling,
+  title={A scaling model for estimating time-series party positions from texts},
+  author={Slapin, Jonathan B and Proksch, Sven-Oliver},
+  journal={American Journal of Political Science},
+  volume={52},
+  number={3},
+  pages={705--722},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@article{laver2003extracting,
+  title={Extracting policy positions from political texts using words as data},
+  author={Laver, Michael and Benoit, Kenneth and Garry, John},
+  journal={American political science review},
+  volume={97},
+  number={2},
+  pages={311--331},
+  year={2003},
+  publisher={Cambridge University Press}
+}
+
+@article{pauwels2011measuring,
+  title={Measuring populism: A quantitative text analysis of party literature in Belgium},
+  author={Pauwels, Teun},
+  journal={Journal of Elections, Public Opinion and Parties},
+  volume={21},
+  number={1},
+  pages={97--119},
+  year={2011},
+  publisher={Taylor \& Francis}
+}
+
+@article{rooduijn2011measuring,
+  title={Measuring populism: Comparing two methods of content analysis},
+  author={Rooduijn, Matthijs and Pauwels, Teun},
+  journal={West European Politics},
+  volume={34},
+  number={6},
+  pages={1272--1283},
+  year={2011},
+  publisher={Taylor \& Francis}
+}
+
+@article{oliver2016rise,
+  title={Rise of the Trumpenvolk: Populism in the 2016 Election},
+  author={Oliver, J Eric and Rahn, Wendy M},
+  journal={The ANNALS of the American Academy of Political and Social Science},
+  volume={667},
+  number={1},
+  pages={189--206},
+  year={2016},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{aslanidis2018measuring,
+  title={Measuring populist discourse with semantic text analysis: an application on grassroots populist mobilization},
+  author={Aslanidis, Paris},
+  journal={Quality \& Quantity},
+  volume={52},
+  number={3},
+  pages={1241--1263},
+  year={2018},
+  publisher={Springer}
+}
+
+@inproceedings{davidson2017automated,
+  title={Automated hate speech detection and the problem of offensive language},
+  author={Davidson, Thomas and Warmsley, Dana and Macy, Michael and Weber, Ingmar},
+  booktitle={Eleventh international aaai conference on web and social media},
+  year={2017}
+}
+
+@article{zampieri2019predicting,
+  title={Predicting the type and target of offensive posts in social media},
+  author={Zampieri, Marcos and Malmasi, Shervin and Nakov, Preslav and Rosenthal, Sara and Farra, Noura and Kumar, Ritesh},
+  journal={arXiv preprint arXiv:1902.09666},
+  year={2019}
+}
+
+@inproceedings{liu2018forecasting,
+  title={Forecasting the presence and intensity of hostility on Instagram using linguistic and social features},
+  author={Liu, Ping and Guberman, Joshua and Hemphill, Libby and Culotta, Aron},
+  booktitle={Twelfth International AAAI Conference on Web and Social Media},
+  year={2018}
+}
+
+@article{hopp2017does,
+  title={Does negative campaign advertising stimulate uncivil communication on social media? Measuring audience response using big data},
+  author={Hopp, Toby and Vargo, Chris J},
+  journal={Computers in human behavior},
+  volume={68},
+  pages={368--377},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{chekroud2016cross,
+  title={Cross-trial prediction of treatment outcome in depression: a machine learning approach},
+  author={Chekroud, Adam Mourad and Zotti, Ryan Joseph and Shehzad, Zarrar and Gueorguieva, Ralitza and Johnson, Marcia K and Trivedi, Madhukar H and Cannon, Tyrone D and Krystal, John Harrison and Corlett, Philip Robert},
+  journal={The Lancet Psychiatry},
+  volume={3},
+  number={3},
+  pages={243--250},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{vargo2017socioeconomic,
+  title={Socioeconomic status, social capital, and partisan polarity as predictors of political incivility on Twitter: A congressional district-level analysis},
+  author={Vargo, Chris J and Hopp, Toby},
+  journal={Social Science Computer Review},
+  volume={35},
+  number={1},
+  pages={10--32},
+  year={2017},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@inproceedings{orabi2018deep,
+  title={Deep learning for depression detection of twitter users},
+  author={Orabi, Ahmed Husseini and Buddhitha, Prasadith and Orabi, Mahmoud Husseini and Inkpen, Diana},
+  booktitle={Proceedings of the Fifth Workshop on Computational Linguistics and Clinical Psychology: From Keyboard to Clinic},
+  pages={88--97},
+  year={2018}
+}
+
+@article{mowery2016identifying,
+  title={Identifying depression-related tweets from Twitter for public health monitoring},
+  author={Mowery, Danielle and Smith, Hilary A and Cheney, Tyler and Bryan, Craig and Conway, Michael},
+  journal={Online Journal of Public Health Informatics},
+  volume={8},
+  number={1},
+  year={2016}
+}
+
+@inproceedings{orasan2018aggressive,
+  title={Aggressive language identification using word embeddings and sentiment features},
+  author={Orasan, Constantin},
+  year={2018},
+  organization={Association for Computational Linguistics}
+}
+
+@inproceedings{nikhil2018lstms,
+  title={Lstms with attention for aggression detection},
+  author={Nikhil, Nishant and Pahwa, Ramit and Nirala, Mehul Kumar and Khilnani, Rohan},
+  booktitle={Proceedings of the First Workshop on Trolling, Aggression and Cyberbullying (TRAC-2018)},
+  pages={52--57},
+  year={2018}
+}
+
+@article{sahay2018detecting,
+  title={Detecting cyberbullying and aggression in social commentary using nlp and machine learning},
+  author={Sahay, Kshitiz and Khaira, Harsimran Singh and Kukreja, Prince and Shukla, Nishchay},
+  journal={International Journal of Engineering Technology Science and Research},
+  volume={5},
+  number={1},
+  year={2018}
+}
+
+
