--- a/text/dissertacao.tex
+++ b/text/dissertacao.tex
@@ -425,9 +425,9 @@ A diferenciação analítica do fenômeno em níveis, apesar de na prática eles
 
 Do ponto de vista da imagem que agentes políticos autoritários constroem de si mesmo, suas plataformas de campanha variam significativamente por contexto cultural. Na Europa Ocidental, partidos de extrema-direita e direita radical tendem a incorporar nativismo, xenofobia, racismo e neoliberalismo em seus discursos \cite{mudde2009populist}. Nos EUA, Nova Zelândia e Canadá, a política do ressentimento, manifesta pela rejeição ostensiva ao \emph{establishment}, conjuga a tônica dos \emph{ousiders} anti-democráticos, e, no caso da Rússia, a xenofobia e o ultranacionalismo desempenham esse papel \cite{norris2005radical}. 
 
-No caso Latino-americano, há um grande número de casos de partidos de extrema-direita que herdaram laços, conexões, recursos e reputação de regimes autoritários que precederam as transições democráticas que ocorreram ao longo da década de 70 e 80 \cite{loxton2014authoritarian}. Em comum, compartilham a defesa de políticas de segurança *mano dura* como alavanca de campanha para angariar votos do eleitorado que, a despeito de antipatizar com as plataformas liberalizantes da economia, enxergava, nas lideranças linha-dura, qualidades que permitiriam reestabelecer a ordem sobre o caos gerado pela insegurança.
+No caso Latino-americano, há um grande número de casos de partidos de extrema-direita que herdaram laços, conexões, recursos e reputação de regimes autoritários que precederam as transições democráticas que ocorreram ao longo da década de 70 e 80 \cite{loxton2014authoritarian}. Em comum, compartilham a defesa de políticas de segurança \emph{mano dura} como alavanca de campanha para angariar votos do eleitorado que, a despeito de antipatizar com as plataformas liberalizantes da economia, enxergava, nas lideranças linha-dura, qualidades que permitiriam reestabelecer a ordem sobre o caos gerado pela insegurança.
 
-A Alianza Republicana Nacionalista (ARENA), no Equador, é um caso especial de sucesso. O partido explorou o vazio de propostas para resolução dos problemas de segurança e a antipatia gerada pelas políticas desarmamentistas defendidas pelo campo político progressista como oportunidade de se posicionar de forma competitiva no cenário eleitoral \cite{holland2013right}. Na composição do partido, estavam membros dos *esquadrões da morte* -- grupos paramilitares que cooperavam com o governo combatendo guerrilhas comunistas na guerra civil que se estendeu ao longo da década de 80 na região -- os quais angariavam credibilidade para execução de políticas *mano dura* de segurança \cite{loxton2014authoritarian}.
+A Alianza Republicana Nacionalista (ARENA), no Equador, é um caso especial de sucesso. O partido explorou o vazio de propostas para resolução dos problemas de segurança e a antipatia gerada pelas políticas desarmamentistas defendidas pelo campo político progressista como oportunidade de se posicionar de forma competitiva no cenário eleitoral \cite{holland2013right}. Na composição do partido, estavam membros dos \emph{esquadrões da morte} -- grupos paramilitares que cooperavam com o governo combatendo guerrilhas comunistas na guerra civil que se estendeu ao longo da década de 80 na região -- os quais angariavam credibilidade para execução de políticas \emph{mano dura} de segurança \cite{loxton2014authoritarian}.
 
 Apesar do populismo penal ser uma marca de campanha proeminente na região que concentra maiores estatísticas de violência do mundo, o autoritarismo é flexível para se adequar em um grande conjunto de narrativas. No caso da Nicarágua, a família Somoza governou o país ao longo dos anos de 1934 e 1979, deixando um legado de violações a direitos civis em nome do combate aos comunistas. Na Venezuela, por outro lado, sob o governo de Hugo Chavez, estatizações, reforma agrária e rivalização com neoliberalismo foram medidas implementadas durante o caminho da reversão autoritária. E em diversas das transições políticas anti-republicanas que ocorreram na América Latina, setores da sociedade civil organizada participaram das mobilizações \cite{valenzuela2004latin}.
 
@@ -439,9 +439,9 @@ Uma das primeiras contribuições para responder essa questão foi feita por \ci
 
 A escala F, desenvolvida por Adorno como operacionalização da teoria, mensura a posição de um indivíduo no espectro do autoritarismo. Nas investigações empíricas sobre o tema, a literatura reúne evidências de que a escala F está associada à discriminação e adesão ao autoritarismo \cite{titus1957california, meloen1993f}, suspeição e baixa confiança interpessoal \cite{deutsch1960trust} e atitudes iliberais \cite{meloen1993f}. Mais recentemente, \citeonline{levitsky2018democracies} construíram um indicador de lideranças de perfil autoritário baseado na medida. Os autores proveram argumentos e evidências que apontam que chefes do executivo com elevados escores na escala F representam grande risco para qualidade e sobrevivência da democracia.
 
-Posteriormente, o indicador de dogmatismo, proposto por \citeonline{rokeach1960open}, interpreta o autoritarismo como uma forma de etnocentrismo generalizado, no qual indivíduos de grupos sociais 'desviantes' são vistos como uma ameaça. Fatores como o fundamentalismo religioso, portanto, são identificados como potenciais causadores do acirramento entre *insiders* e *outsiders* e, consequentemente, propensão a preconceito religioso \cite{laythe2001predicting}, contra homossexuais \cite{hunsberger1996religious, jonathan2008influence} e racial \cite{rowatt2004christian}.
+Posteriormente, o indicador de dogmatismo, proposto por \citeonline{rokeach1960open}, interpreta o autoritarismo como uma forma de etnocentrismo generalizado, no qual indivíduos de grupos sociais 'desviantes' são vistos como uma ameaça. Fatores como o fundamentalismo religioso, portanto, são identificados como potenciais causadores do acirramento entre \emph{insiders} e \emph{outsiders} e, consequentemente, propensão a preconceito religioso \cite{laythe2001predicting}, contra homossexuais \cite{hunsberger1996religious, jonathan2008influence} e racial \cite{rowatt2004christian}.
 
-Porém, foram com os trabalhos de \citeonline{altemeyer1981right} que os efeitos cognitivos da violência sobre o autoritarismo ficaram mais claros. Em sua principal contribuição para a literatura, definiu o *Right-wing Authoritarianism* (RWA) como uma medida da percepção do mundo como um lugar hostil e perigoso, no qual a segurança coletiva, a estabilidade e a ordem são indispensáveis a qualquer custo.
+Porém, foram com os trabalhos de \citeonline{altemeyer1981right} que os efeitos cognitivos da violência sobre o autoritarismo ficaram mais claros. Em sua principal contribuição para a literatura, definiu o \emph{Right-wing Authoritarianism} (RWA) como uma medida da percepção do mundo como um lugar hostil e perigoso, no qual a segurança coletiva, a estabilidade e a ordem são indispensáveis a qualquer custo.
 
 Nessa perspectiva, o autorarismo é subproduto de um estado mental de superestresse, ocasiodo por uma profunda sensação de medo e impotência. Como resposta ao contexto em que se encontram, indivíduos tendem a adotar uma postura de suspeição radical. Essa postura combina uma submissão dogmática às autoridades, às regras e às convenções sociais que sustentam a realidade social como conhecida com uma resposta agressiva com o desconhecido.
 
@@ -486,11 +486,9 @@ O discurso autoritário apresenta ainda dimensões revelevantes no que dizem res
 
 Em convergência com essa caracterização, \citeonline{smith1990symptomology} apresentou constribuição relevante para uma tipologia dos discursos autoritários analisando debates parlamentares acerca da ``proibição do fomento a homosexualidade'', que ocorreram entre as décadas de 80 e 90, nos EUA. Segundo a autora as falas autoritárias que emergiram sobre o tema apresentavam um traço marcante: a evocação de preconceitos e associações espúrias como método de enquadrar a discussão de forma desfavorável para a população gay. Em um dos exemplos dessa atitude, a menção à soropositividade como \emph{link} entre homossexualidade e problemas de saúde pública:
 
-\begin{samepage}
-	\begin{quote}
-		A hegemonic interpretation of the AIDS phenomenon is, for example, actually a representation of radical difference, situated within a long tradition of similar representations of 'other' social elements. This AIDS discourse is linked genealogically to popular anxieties about various diseases, communist infiltration, immigrant populations, crime 'waves', drug 'crazes', etc. \cite{smith2015advances}
-	\end{quote}
-\end{samepage}
+\begin{quote}
+	A hegemonic interpretation of the AIDS phenomenon is, for example, actually a representation of radical difference, situated within a long tradition of similar representations of 'other' social elements. This AIDS discourse is linked genealogically to popular anxieties about various diseases, communist infiltration, immigrant populations, crime 'waves', drug 'crazes', etc. \cite{smith2015advances}
+\end{quote}
 
 A conexão entre soropositividade e homossexualidade é um caso típico do fenômeno cognitivo documentado como \emph{illusory correlation}, segundo o qual duas categorias de eventos são associadas sem que sua co-ocorrência estatística seja signficativa. Além de uma inferência incorreta, capaz de estimular conclusões inadequadas, está na raiz do reforço de esteriótipos de raça, gênero e sexualidade que fazem parte do discurso autoritário. Quando indivíduos percebem maior frequencia relativa de comportamentos rejeitados em um grupo, há uma tendência de identificá-los como atributo intrínseco ao grupo em questão, mesmo que a ocorrência absoluta de ``imposturas'' seja baixa \cite{sidanius2001social}.   
 
@@ -554,6 +552,34 @@ Como consequência das limitações, foram identificados apenas dois trabalhos n
 
 \section{Análise Automatizada de Conteúdo}
 
+O uso de Análise Automatizada de Conteúdo tem se popularizado nas Ciências Sociais Aplicadas como um conjunto de técnicas que permitem a investigação em grandes bases de dados de \emph{corpus textuais} \cite{gentzkow2019text}. Na Ciência Política, a escrita registra boa parte da atividade de agentes políticos. Leis, documentos oficiais, discursos no plenário e manifestos registram boa parte das mobilizações instituicionais e civis nas dinâmicas de poder da sociedade e, portanto, há grande potencialidade para extração de conhecimento de fontes pouco exploradas \cite{wilkerson2017large}.
+
+No que diz respeito a aplicabilidade dos modelos utilizados, algumas meta-análises dedicaram-se abordar o estado da arte da literatura e apontar seus principais avanços e dificuldades. \emph{Wordfish}, \emph{Wordscores} e \emph{Latent Dirichlet Allocation} (LDA) estão entre os algoritmos mais populares e foram desenvolvidos, respectivamente, com os propósitos de: i) identificar posicionamento ideológico implícito; ii) mensurar a associação entre palavras e expressões e escalas númericas e iii) extrair agrupamentos temáticos de documentos \cite{slapin2008scaling, laver2003extracting, blei2003latent}. 
+
+Entre as vantagens apresentadas pelos avanços no desenvolvimento de algoritmos, a possibilidade de abordar vários componentes da linguagem como unidades de análise está entre um deles. Classificação e extração de \emph{features} de documentos, tópicos, entidades textuais, sentenças e agentes de discurso permite seu uso na solução de problemas de pesquisa diversos. Além disso, o préprocessamento de bases oriundas de qualquer fonte -- de Redes Sociais a biblitoecas de livros escaneados -- tem sido cada vez mais eficiente \cite{grimmer2013text, wilkerson2017large, gentzkow2019text}.   
+
+Em edição dedicada às ``\emph{Recent Innovations in Text Analysis for Social Science}'', no periódico da \emph{Political Analysis}, os artigos reunidos constituem bons exemplos de  aplicações de análise automatizada de conteúdo para identificação de i) informação sobre etnicidade a partir de nome, ii) de posicionamento ideológico latente, iii) \emph{expressed agenda} e iv) classes de documentos \cite{roberts2016introduction}. Publicações na nacionais dedicadas a \emph{clusterização} de discursos e de proposições de parlamentares \cite{batista2016mensurando, moreira2016palavra} contribuem como evidências de crescente usabilidade das técnicas.
+
+Análise automatizada de conteúdo também tem sido utilizada na identificação de atitudes e comportamento de agentes políticos. 
+A partir de técnicas de codificiação baseadas em dicionário de termos, trabalhos foram capazes de replicar, com relativa precisão, a classificação de realizada por codificadores individuais de discursos populistas \cite{pauwels2011measuring, rooduijn2011measuring, oliver2016rise}. De forma similar, outras investigações utilizaram processamento de linguagem natural para automatização de partes do processo de identificação, como o reconhecimento de entidades associadas a adjetivos populistas \cite{kyle2018populists} e detecção de \emph{triplets} -- tríades compostas por sujeito, verbo e predicado \cite{aslanidis2018measuring}.
+
+Para além da classificação de atributos atitudinais, alogirmtos de \emph{machine learning} também têm sido capazes de modelar fenômenos psicológicos complexos como discurso de ódio \cite{davidson2017automated, zampieri2019predicting}, hostilidade \cite{hopp2017does, vargo2017socioeconomic, liu2018forecasting}, agressividade \cite{orasan2018aggressive, sahay2018detecting, nikhil2018lstms} e depressão \cite{mowery2016identifying, chekroud2016cross, orabi2018deep}. Portanto, é intuitivo crer que as vantagens das quais uma grande literatura têm se beneficiado no uso de técnicas de análise automatizada de conteúdo também podem ser extendidas aos estudos sobre autoritarismo entre agentes políticos em sistemas democráticos.
+
+Todavia, algumas ressalvas importantes quanto a natureza dos modelos estatísticos de texto precisam ser salientadas. \citeonline{grimmer2013text} apresentou os \emph{4 Princípios da Análise Quantiva de Texto}, são eles:
+
+\begin{itemize}
+	\item All quantitative models of language are wrong–but some are useful.
+	\item Quantitative methods for text amplify resources and augment humans.
+	\item There is no globally best method for automated text analysis.
+	\item Validate, Validate, Validate.
+\end{itemize}
+
+Os tópicos sintetizam as maiores dificuldades da literatura que consome as novas ténicas de processamento de texto. Há grande perda de informação do valor semântico das palavras e frases quando elas são transformadas em vetores de números. Além disso, modificações no corpus textual analisado pode impactar em significativas mudanças nas estimativas realizadas. Por fim, a validação e, principalmente, a consistência dos resultados apresentados nos trabalhos ainda permanece numa zona relativamente obscura. 
+
+\subsection{Modelo de Classificação de Agentes Políticos Autoritários}
+
+aa
+
 \begin{figure}[h]
 	\caption{Diagrama do Discurso Político}
 	\label{fig:diagrama}
@@ -565,7 +591,7 @@ Como consequência das limitações, foram identificados apenas dois trabalhos n
 
 \section{Coletando dados}
 
-\section{Definindo Dicionário de Entidades}
+\section{Estimando meta-parâmetros textuais}
 
 \section{Avaliando resultados}		
 % ----------------------------------------------------------
